--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -2,12 +2,14 @@
 
 @mixin section-style ($flex-direction:column) {
     border: 1px solid red;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0;
     margin: 0;
+    font-size:small;
 }
 
 @mixin openSans($bold:bold, $font-style:normal) {
@@ -17,4 +19,5 @@
     font-style: normal;
     font-variation-settings:
         "wdth" 100;
+    margin: 0;
 }
